# ghost-mux

./: .gitignore  AGENTS.md  As an issue  Cargo.toml  README.md  Todo.md  Wasm_Compilation_Guide.md  settings.yaml
.agents/: mcp_config.json
.github/workflows/: build.yml
patches/: gpui-component.patch
patches/libghostty-vt-sys/: build.rs
src/: browser.rs  dashboard.rs  hook_server.rs  layout.rs  main.rs  persist.rs  remote_api.rs  settings.rs
src/terminal/: mod.rs
tools/: setup-patches.ps1  setup-patches.sh
tools/linux/: build-production.sh  dev-run.sh  ensure-zig.sh  run-production.sh
tools/macos/: build-production.sh  dev-run.sh  ensure-zig.sh  run-production.sh
tools/windows/: build-production.cmd  build-production.ps1  dev-run.cmd  dev-run.ps1  ensure-zig.cmd  ensure-zig.ps1  run-production.cmd  run-production.ps1
