[package]
name = "ghost-mux"
version = "0.1.0"
edition = "2021"
default-run = "ghost-mux"

description = "A GPUI desktop app with resizable panel layout"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-languages"] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
portable-pty = "0.9"
libghostty-vt = "0.1.1"
libghostty-vt-sys = { version = "0.1.1", features = ["vendored"] }
lsp-types = "0.97.0"
futures = "0.3"
async-channel = "2.5"
url = "2.5"
ureq = { version = "2.9.7", features = ["tls", "json"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc = "0.2.7"
raw-window-handle = "0.6.2"


[[bin]]
name = "ghost-mux-server"
path = "src/bin/server.rs"

[patch.crates-io]
libghostty-vt-sys = { path = "patches/libghostty-vt-sys" }

[patch."https://github.com/longbridge/gpui-component"]
gpui-component = { path = "patches/gpui-component/crates/ui" }
gpui-component-assets = { path = "patches/gpui-component/crates/assets" }

[profile.dev]
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
